--- a/app/webroot/css/LargeSkeleton.css
+++ b/app/webroot/css/LargeSkeleton.css
@@ -187,11 +187,21 @@ color:grey;
 height:470px;
 }
 
-
+.write-header a{
+width:auto;
+height:100%;
+float:left;
+line-height: 22px;
+font-size: 19px;
+padding-top: 18px;
+text-decoration:none;
+color:#f26522;
+}
 
 
 .account{
-width:32%;
+min-width:29%;
+width:auto;
 float:left;
 font-family:"jaf-bernino-sans","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
 letter-spacing: -0.02em;
@@ -200,17 +210,19 @@ font-style: normal;
 white-space: nowrap;
 line-height: 50px;
 color:#f26522;
+float:right;
 }
 
 
 .accountPhoto{
-width:36px;
+width:25%;
 height:50px;
-margin-right:10px;
 float:left;
 }
 
 .circlePhoto{
+margin:0px auto;
+display:block;
 border: 1px solid #FFF;
 box-shadow: 0 1px 2px rgba(0,0,0,0.4);
 background-size:35px 35px;
@@ -226,6 +238,8 @@ position: relative;
 margin: 0;
 padding: 0;
 z-index: 30;
+width:75%;
+float:left;
 }
 
 .accountMenu li{
@@ -240,13 +254,16 @@ cursor: pointer;
 .accountMenu li a {
 display: block;
 margin: 0 1px 0 0;
-text-align: center;
+text-align: left;
 text-decoration: none;
+padding-left:5%;
+padding-top:1%;
+font-size:17px;
 }
 
 
 .accountMenu div{
-width:180px;
+width:200px;
 visibility: hidden;
 margin: 0;
 padding: 0;
@@ -256,8 +273,10 @@ border-left: 1px solid #d1d1d4;
 box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
 -moz-box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
 -webkit-box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
-float:right;
 margin-top:1px;
+left: -20%;
+position: relative;
+opacity:0.98;
 }
 
 .accountMenu div a{
@@ -273,6 +292,7 @@ color: grey;
 height:40px;
 line-height:40px;
 border-bottom: 1px solid #f4f4f4;
+font-size:16px;
 }
 
 .accountMenu div a:hover{
@@ -1760,7 +1780,7 @@ height:auto;
 .article-main-photo{
 width:100%;
 height:350px;
-background-color:red;
+background-color:#efefef;
 }
 
 .article-main-body{
@@ -1785,7 +1805,7 @@ font-family:helvetica world;
 .article-info-right{
 width:37.5%;
 margin-left:2.5%;
-height:200px;
+height:auto;
 background-color:white;
 border-radius: 3px;
 box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
@@ -1811,10 +1831,8 @@ padding-left:10px;
 }
 
 .author-info2{
-width:100%;
-height:80px;
-float:left;
-padding-left:10px;
+width: 100%;
+height: auto;
 }
 
 
@@ -1836,6 +1854,9 @@ padding-top:15px;
 }
 
 .Article-share-social-desc{
+width:90%;
+display: block;
+margin: 0px auto;
 color:grey;
 margin-bottom:20px;
 }
@@ -1939,7 +1960,8 @@ text-decoration:underline;
 
 .article-mini-info2{
 width:100%;
-height:50px;
+height:auto;
+margin-top:25%;
 }
 
 .article-mini-info-left{
@@ -1959,16 +1981,15 @@ float:left;
 color:#f26522;
 padding-top:19px;
 padding-left:18px;
-
 }
 
-
 .Article-share-social{
-width:37.5%;
-height:60px;
-float:left;
-margin-left:2.5%;
-margin-top:20px;
+width:100%;
+height:auto;
+float: left;
+display: block;
+margin: 0px auto;
+margin-top: 20px;
 }	
 
 .Article-share-fb{
@@ -2127,7 +2148,9 @@ background: url("../img/new_arrow.png") no-repeat right;
 }
 
 .save-article{
-width:100%;
+width:90%;
+display: block;
+margin: 0px auto;
 height:38px;
 text-align:center;
 color:white;
@@ -2143,7 +2166,9 @@ background-color:#02a231;
 }
 
 .publish-article{
-width:100%;
+width:90%;
+display: block;
+margin: 0px auto;
 height:38px;
 text-align:center;
 color:white;
