--- a/app/webroot/css/LargeSkeleton.css
+++ b/app/webroot/css/LargeSkeleton.css
@@ -664,6 +664,7 @@ width:100%;
 height:30px;
 float:left;
 border-bottom:1px solid #e5e5e5;
+margin-top:15px;
 margin-bottom:15px;
 }
 
@@ -688,9 +689,9 @@ width:20%;
 float:left;
 font-family:helvetica world;
 color:#858585;
-font-size:16px;
+font-size:17px;
 padding-left:7px;
-padding-top:1px;
+padding-top:2px;
 }
 
 .userRatings{
@@ -2711,7 +2712,8 @@ border-right:1px solid #e5e5e5;
 .like-and-rate-right{
 width:50%;
 height:100%;
-float:left;
+margin:0px auto;
+display:block;
 }
 
 .like-and-rate-title{
