--- a/app/webroot/css/mobileskeleton.css
+++ b/app/webroot/css/mobileskeleton.css
@@ -837,17 +837,17 @@ float:left;
 
 .listName{
 width:100%;
-height:30px;
-line-height:45px;
+height:35px;
+padding-top:20px;
 margin-bottom:6px;
-padding-left:5px;
+padding-left:2%;
 font-size:17px;
 font-family:Helvetica World;
 color:#f26522;
 }
 
 .listviews{
-width:26%;
+width:30%;
 height:25px;
 float:left;
 line-height:22px;
@@ -861,7 +861,7 @@ margin-left:5%;
 }
 
 .listReviews{
-width:26%;
+width:30%;
 height:25px;
 float:left;
 line-height:22px;
@@ -873,7 +873,10 @@ padding-top:1px;
 width:100%;
 height:25px;
 float:left;
-margin-left:2px;
+padding-left:2%;
+color:grey;
+font-size:15px;
+padding-top:1px;
 }
 
 .listArrow{
@@ -1460,20 +1463,16 @@ height:80px;
 border-top:1px solid #e5e5e5;
 }
 
-.like-and-rate-left{
-width:50%;
-height:100%;
-float:left;
-border-right:1px solid #e5e5e5;
-}
 
 .like-and-rate-right{
 width:50%;
 height:100%;
-float:left;
+margin:0px auto;
+display:block;
 }
 
 .like-and-rate-title{
+width:100%;
 text-align:center;
 color:grey;
 font-size:16px;
