--- a/app/webroot/css/mobileskeleton.css
+++ b/app/webroot/css/mobileskeleton.css
@@ -74,6 +74,7 @@ color:grey;
 width:100%;
 width:100%;
 margin-top:20px;
+
 }
 
 .newleftList{
@@ -1465,7 +1466,7 @@ border-top:1px solid #e5e5e5;
 
 
 .like-and-rate-right{
-width:50%;
+width:40%;
 height:100%;
 margin:0px auto;
 display:block;
@@ -1559,12 +1560,13 @@ width:90%;
 height:100%;
 margin:0px auto;
 border-bottom:1px solid #efefef;
+
 }
 
 .textboxStandardLeft{
-width:100%;
-height:40px;
-margin-top:20px;
+width:57%;
+height:35px;
+margin-top:25px;
 border:1px solid #d5d5d5;
 color:grey;
 outline:none;
@@ -1572,6 +1574,7 @@ font-family:helvetica world;
 font-size:16px;
 padding:15px;
 padding-left:20px;
+margin-left:15%;
 }
 
 .select-sport{
